--- a/数据库设计.md
+++ b/数据库设计.md
@@ -61,18 +61,18 @@ work_order table 工单表
 
 
 
-  待完成事情
-
-  1 github 代码统一管理  我完成
-  2 服务linux/windows 系统环境  hui
-  3 是否数据一定从excel来导入还是可以通过我们设计的方式  hui
-  4 时间段是否固定，如果现在固定，以后是否有变化 hui
+  1 github 代码统一管理  
+  2 服务linux/windows 系统环境 
+  服务端环境可以自行定义
+  3 是否数据一定从excel来导入还是可以通过我们设计的方式  
+  不一定，只要能完成需求就可以
+  4 时间段是否固定？
   场地固定 从8：00到22：00，每个小时一个时间段，比如8：00-9：00，9：00-10：00...
-  5 场地是否增减  hui
+  5 场地是否增减  
   是
-  6 支持方式的问题  hui
+  6 支持方式的问题  
   两年
-  7 场地的价格和vip等级相关外，还是不同场地，不同时间，有不同价格；制定价格因素有哪些 hui
+  7 场地的价格和vip等级相关外，还是不同场地，不同时间，有不同价格；制定价格因素有哪些 ？
   影响价格的因素只有vip等级，客户端做成进度条的样式，通过手动方式更改价格折扣
   8 试验室管理员有权在特殊情况可以修改客户的预约，什么情况下可以改？ 是审批状态下可以改，还是都可以改。
   关闭和开发任意时段的工位；调整客户的预约，任何时候都可以修改；没有审批状态。
